+ features
* bugfixes
====================== 0.9.25 ======================
Game:
 * Fix extreme amounts of droplets when shooting with minigun into ocean world edge
 * Fix hog being unable to walk after using sniper rifle without firing both shots
 * Fix teleport tooltip claiming it doesn't end turn in hog placing phase with inf. attack

Highlander:
 * Fix all hogs getting teleport after hog placement phase

Continental supplies:
 + Continents are now selected before the game starts
 + Continents give hog different start health
 + Add Antarctica special: Upside-Down World (teleport to top of map)
 + Major rewrite of ALL texts for better usability
 + Add custom weapon tooltips
 + Improve audiovisual effects
 + Show message when hog receives new continent ammo
 + Sabotaged hedgehogs also emit smoke when it's not their turn
 + Can switch continent in reverse order with [Precise]+[Switch]
 * Invulnerability now protects from sabotage damage
 * Sabotage kills hog instantly when health reaches 0
 * Reliably prevent using of Lonely Cries and baseball bat specials when usage not allowed
 * Don't explode Anno 1302, Medicine and Bouncy Boomerang if drowning
 * Don't play “Missed” and “Laugh” taunt when those don't make sense
 * Fix retreat timer not turning red for some weapons

Space Invation:
 + Display round score in a separate row
 + Keep round score displayed after round ends, remove round score announcer message
 * Fix rare Lua error message spam at end of game
 * Fix round score and other info numbers messing up after screen resize

Lua API:
 + New call: Retreat(time [, respectGetAwayTimeFactor): Force current turn into retreating mode
 + New call: GetAmmoTimer(gearUid, ammoType): Returns current set timer for given ammoType and hog gear in ms. Returns nil for non-timerable ammo
 + New call: EnableSwitchHog(): Enable hog switching
 + New call: GetAmmo(ammoType): Returns ammo configuration (corresponds to SetAmmo)